| Bug #13124 | Stored Procedure using SELECT INTO crashes server | ||
|---|---|---|---|
| Submitted: | 12 Sep 2005 20:57 | Modified: | 13 Sep 2005 18:13 |
| Reporter: | Carsten Segieth | ||
| Status: | Closed | ||
| Category: | Server: SP | Severity: | S1 (Critical) |
| Version: | 5.0.13 | OS: | Linux (Suse Linux 9.3) |
| Assigned to: | Bugs System | Target Version: | |
[13 Sep 2005 13:21]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29728

Description: Calling a Stored Procedure that contains SELECT INTO crashes the server Detected in regression tests that were OK last week. How to repeat: use this sequence: create table t2(f1 char(20),f2 char(25),f3 date,f4 int,f5 char(25),f6 int); INSERT INTO t2 VALUES ('a', 'a', '1000-01-1', -5000, 'a', -5000); DROP PROCEDURE IF EXISTS sp1; delimiter //; CREATE PROCEDURE sp1( ) BEGIN declare x integer; declare y integer; set @x=x; set @y=y; SELECT f4,f3 into @x, @y from t2 limit 1; SELECT @x, @y; END// delimiter ;// CALL sp1(); # cleanup DROP PROCEDURE sp1;