Fix for Bug #13124 Stored Procedure using SELECT INTO crashes server